--- a/mod-simple-teaser.html
+++ b/mod-simple-teaser.html
@@ -1,5 +1,5 @@
 <!-- mod: simple teaser -->
-<h2 class="mod-headline">Simple Teaser Modul</h2>
+<h2 class="mod-headline">Simple Teaser Module</h2>
 <section class="mod-simple-teaser-wrapper">
 	<h2>[Headline]</h2>
 	<img src="http://dummyimage.com/300x100/000/fff.png" alt="[Headline]" />
