put a-tag around the whole teaser

--- a/mod-simple-teaser.html
+++ b/mod-simple-teaser.html
@@ -1,10 +1,12 @@
 <!-- mod: simple teaser -->
 <h2 class="mod-headline">Simple Teaser Module</h2>
 <section class="mod-simple-teaser-wrapper">
-	<h2>[Headline]</h2>
-	<img src="http://dummyimage.com/300x100/000/fff.png" alt="[Headline]" />
-	<p>[Copytext]</p>
-	<a class="mod-simple-teaser-link">[Link)</a>
+	<a href="#" title="[HEADLINE]">
+		<h2>[Headline]</h2>
+		<img src="http://dummyimage.com/300x100/000/fff.png" alt="[HEADLINE]" />
+		<p>[Copytext]</p>
+		<button class="mod-simple-teaser-link">[LINK)</button>
+	</a>
 </section>
 <hr>
 <!-- // -->
