--- a/mod-simple-teaser.html
+++ b/mod-simple-teaser.html
@@ -1,6 +1,6 @@
 <!-- mod: simple teaser -->
 <h2 class="mod-headline">Simple Teaser Module</h2>
-<article class="mod-simple-teaser-wrapper">
+<article class="mod-simple-teaser">
 	<a href="#" title="[HEADLINE]">
 		<header>
 			<h2>[Headline]</h2>
